force-app/main/default/objects/Emergency_Contact__c.object
<CustomObject>
    <description>Emergency contacts for the student</description>
    <fields>
        <fullName>Add_Additional__c</fullName>
        <description>User request to add additional contact. Drives conditional assignment of additional contact sections</description>
        <label>Add Additional Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <description>Emergency contact name (first and last)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Emergency Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Emergency contact 2 home phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Emergency contact 2 mobile phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Phone__c</fullName>
        <description>Emergency contact primary phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <description>The Program Enrollment record of the student.</description>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Emergency Contacts</relationshipLabel>
        <relationshipName>Emergency_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Group</label>
        <referenceTo>Enrollment_Component__c</referenceTo>
        <relationshipLabel>Emergency Contacts</relationshipLabel>
        <relationshipName>Emergency_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Emergency contact relationship to student</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Care Provider</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Other relative</fullName>
                </value>
                <value>
                    <fullName>Stepfather</fullName>
                </value>
                <value>
                    <fullName>Stepmother</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Phone__c</fullName>
        <description>Emergency contact secondary phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Secondary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>Emergency contact 2 work/business phone</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Emergency Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Emergency Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Emergency Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>